Fixed moving cursor target on mobile

--- a/src/scss/imports/_cursor.scss
+++ b/src/scss/imports/_cursor.scss
@@ -1,9 +1,5 @@
 .cursor {
-  display: none;
-
-  @media (min-width: $breakpoint-desktop) {
-    display: block;
-  }
+  display: block;
 
   .dot {
     position: absolute;
